--- a/code/cmcc-portal-server/src/log4j.properties
+++ b/code/cmcc-portal-server/src/log4j.properties
@@ -12,6 +12,5 @@ log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.MaxFileSize=100MB
 log4j.appender.file.MaxBackupIndex=100
 log4j.appender.file.File=D\:\\cmcc.log
-log4j.appender.file.DatePattern = '.'yyyy-MM-dd 
+#log4j.appender.file.DatePattern = '.'yyyy-MM-dd 
 log4j.appender.file.layout=org.apache.log4j.PatternLayout 
-log4j.appender.file.layout.Conv
