--- a/code/cmcc-portal-server/.classpath
+++ b/code/cmcc-portal-server/.classpath
@@ -15,5 +15,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/druid-1.0.9.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-dbutils-1.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-collections4-4.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/junit4.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
